# optlite

./: .dockerignore  .gitignore  484.bundle.js  919.bundle.js  984.bundle.js  Dockerfile  Makefile  README.md  add_cache_busting_query_strings.py  c.html  composingprograms.html  cpp.html  cs1302_serverless.html  cs1302visualize.html  csc108h.html  csc108h_shared.html  iframe-embed.html  index.html  index_2018-03-17.html  java.html  javascript.html  live.html  nginx.conf  opt-live.bundle.js  optlite.py  package-lock.json  package.json  pg_logger.py  pytutor-c-embed.html  pytutor-embed-demo-simple.html  pytutor-embed-demo.html  pytutor-oop-embed.html  recorder.html  render-trace.html  ruby.html  setup.cfg  setup.py  tsconfig.json  typescript.html  visualize.bundle.js  (+4 more)
.github/workflows/: deploy.yml
Docker/: Makefile
Kubernetes/: Makefile
Kubernetes/mytutor-chart/: Chart.yaml  Makefile  result.yaml  value_temp.yaml  values.yaml
css/: opt-frontend.css
example-code/python/: numpy.txt  ten_Seconds.txt  thirty_calls.txt  two_MB.txt
js/: _references.ts  example-links.ts  footer-html.ts  global.d.ts  opt-frontend-common.ts  opt-frontend.ts  opt-live.ts  opt-shared-sessions.ts  opt-testcases.ts  pytutor-embed.ts  pytutor.ts  recorder.ts  serverless.ts  visualize.ts
js/common/: value.js  version.js
js/config/: HostConfig.ts
js/cruft/: shared-sessions.js  syntax-error-bubble.js
js/lib/: mobile-detect.min.js
js/pyodide/: global.ts  optworker.js  runner.ts
optlite/: __init__.py  _version.py  pg_logger.py
static/: optlite-0.0.4-py2.py3-none-any.whl
(+23 files in other folders)
