[bdist_wheel]
universal=1

[metadata]
name = optlite
description = Serverless setup for OPT with pyodide.
long_description = file: README.md
long_description_content_type = text/markdown
author       = DIVE
author_email = chungc@alum.mit.edu
url          = https://github.com/dive4dec/optlite
license = BSD
license_files = LICENSE.txt
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
python_requires = >=3.6
include_package_data = True
install_requires =
packages = find:

[options.packages.find]
where = .
include = optlite
